# scorebench

./: .gitignore  AGENTS.md  README.md  TRADEMARKS.md  package-lock.json  package.json  vite.config.js
.github/: release-notes.md
.github/workflows/: ci.yml  homebrew.yml  pages.yml  release.yml
docs/: imagery-plugin-protocol.md  performance.md  roadmap.md  verification.md
docs-site/: book.toml
docs-site/src/: SUMMARY.md  arrangement-basics.md  getting-started.md  glossary.md  introduction.md  rendering.md  scene-protocol.md  sound-sources.md  troubleshooting.md  working-with-agent.md
examples/armor-material-lab/: README.md  index.html  main.ts
examples/mood-demo/: README.md  index.html  main.ts
scripts/: check-client-bundle.mjs  check-tag-version.mjs  set-version.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: NOTICE  icon.icns
src-tauri/src/: agent.rs  attachments.rs  error.rs  lib.rs  main.rs  manifest.rs  memory.rs  observation.rs  project.rs  review.rs  scorekit.rs  sessions.rs  settings.rs  styles.rs  watcher.rs
src-tauri/src/agent/: tools.rs
src-tauri/src/llm/: mod.rs  sse.rs  types.rs
src-tauri/styles/builtin/: aaa-game-score.yaml  chinese-campus-folk-90s.yaml  chiptune-adventure.yaml  cinematic-underscore.yaml  eastern-wuxia.yaml  epic-new-age-instrumental.yaml
src-tauri/tests/: tauri_boundary.rs
src-tauri/tests/fixtures/: doctor.json  error_io.json  forest.meta.json  responses_multi_tool.sse  responses_text.sse  responses_tool.sse  review_response.txt
src-tauri/tests/fixtures/scenes/: forest_suite.yaml
(+60 files in other folders)
